--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8" />
         <title>Подгрузка модулей для angularjs</title>
     </head>
-    <body>
+    <body ng-controller="baseController">
         <h1>Погдгрузка модулей на angularjs</h1>
-        <div data-lazy-load="testModule"></div>
-        <div data-lazy-load="testModule2"></div>
+        <div id="testModule"></div>
+        <div id="testModule2"></div>
         <script src="js/vendor/angular/angular.min.js" type="text/javascript"></script>
         <script src="js/vendor/require.js" type="text/javascript"></script>
         <script src="js/modules/lazyLoad/lazyLoad.js" type="text/javascript"></script>
