--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body ng-controller="baseController">
         <h1>Погдгрузка модулей на angularjs</h1>
+        {{mimi | test}}
         <div id="testModule"></div>
         <div id="testModule2"></div>
         <script src="js/vendor/angular/angular.min.js" type="text/javascript"></script>
