--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <body ng-controller="baseController">
         <h1>Погдгрузка модулей на angularjs</h1>
         {{mimi | test}}
+
+        {{mimi | test}}
+
+        {{"pidr" | test}}
         <div id="testModule"></div>
         <div id="testModule2"></div>
         <script src="js/vendor/angular/angular.min.js" type="text/javascript"></script>
